--- a/github-user-search/package.json
+++ b/github-user-search/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipe-sharing-app",
+  "name": "github-user-search",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,8 +13,7 @@
     "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1",
-    "zustand": "^5.0.6"
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
