--- a/github-user-search/.gitignore
+++ b/github-user-search/.gitignore
@@ -6,12 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-.env
+
 node_modules
 dist
 dist-ssr
 *.local
-
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +22,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.env
+*/.env
